major fixes to the attachments feature for messages